# cartograph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml  deny.toml  package-lock.json  package.json  rust-toolchain.toml
.changeset/: README.md  adapter-inventory.md  anthropic-provider.md  async-recovery-commands.md  atlas-banded-layout.md  atlas-focus.md  batch-escalation.md  chrome-messaging-channels.md  clear-system.md  evidence-drawer-v2.md  flow-inspector-surface.md  gap-classes.md  gaps-drift-register.md  graph-context-assembly.md  heavy-moons-shake.md  help-surface.md  ingest-flow.md  java-language-adapter.md  jobs-spine-v2.md  jobs-surface-hygiene.md  jobs-surface-ui.md  literal-eval-extraction.md  local-slm-tier.md  node-esm-resolution.md  plugin-discovery.md  plugin-provenance.md  plugin-unsupported-lane.md  preflight-finding-model.md  provenance-eval-surface.md  recovery-metrics.md  resolution-strategy-modal.md  settings-consent.md  settings-surface.md  shiny-shell-lands.md  spec-workbench-lock.md  tidy-maps-release.md  toolchain-evidence-nodes.md  webextension-manifest-adapter.md  workspace-landing.md
.claude/: launch.json
.claude/skills/add-language-adapter/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml  user-story.yml
.github/workflows/: ci.yml  claude.yml  package.yml  release.yml  version-cut.yml
crates/adapters-fw/: Cargo.toml
crates/adapters-fw/src/: client.rs  events.rs  lib.rs  tsconfig.rs
crates/adapters-lang-go/: Cargo.toml
crates/adapters-lang-go/src/: lib.rs  tests.rs
crates/adapters-lang-java/: Cargo.toml
crates/adapters-lang-java/src/: lib.rs  tests.rs
crates/adapters-lang-kotlin/: Cargo.toml
crates/adapters-lang-kotlin/src/: lib.rs  tests.rs
crates/adapters-lang-python/: Cargo.toml
crates/adapters-lang-python/src/: lib.rs  tests.rs
crates/adapters-lang-ts/: Cargo.toml
crates/adapters-lang-ts/src/: chrome_messaging.rs  indexeddb.rs  lib.rs  resolution.rs  tests.rs  webextension.rs
crates/adapters-plugin-host/: Cargo.toml
crates/adapters-plugin-host/src/: discovery.rs  gate.rs  lib.rs  route.rs
crates/adapters-plugin-host/tests/: integration.rs
crates/adapters-plugin-host/tests/fixtures/: README.md
crates/adapters-plugin-host/tests/fixtures/busy-loop/: Cargo.toml
crates/adapters-plugin-host/tests/fixtures/busy-loop/src/: lib.rs
crates/adapters-plugin-host/tests/fixtures/clock-probe/: Cargo.toml
crates/adapters-plugin-host/tests/fixtures/clock-probe/src/: lib.rs
crates/adapters-plugin-host/tests/fixtures/compiled/: busy-loop.wasm  clock-probe.wasm  memory-hog.wasm  net-probe.wasm  ok-adapter.wasm
crates/adapters-plugin-host/tests/fixtures/memory-hog/: Cargo.toml
crates/adapters-plugin-host/tests/fixtures/memory-hog/src/: lib.rs
crates/adapters-plugin-host/tests/fixtures/net-probe/: Cargo.toml
crates/adapters-plugin-host/tests/fixtures/net-probe/src/: lib.rs
crates/adapters-plugin-host/tests/fixtures/ok-adapter/: Cargo.toml
crates/adapters-plugin-host/tests/fixtures/ok-adapter/src/: lib.rs
crates/adapters-plugin-host/wit/: adapter.wit
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs
crates/core-graph/: Cargo.toml
crates/core-graph/src/: lib.rs
crates/core-prov/: Cargo.toml
crates/core-prov/src/: lib.rs
crates/dynamic/: Cargo.toml
crates/dynamic/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  tests.rs
crates/flowtracer/: Cargo.toml
crates/flowtracer/src/: lib.rs  tests.rs
crates/iac/: Cargo.toml
crates/iac/src/: lib.rs  registry.rs  tests.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  manifest.rs  preflight.rs  tests.rs  toolchain.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  catalog.rs  lib.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: context.rs  lib.rs
crates/spec/: Cargo.toml
crates/spec/src/: adr.rs  lib.rs  security.rs  workbench.rs
docs/: SPEC-00_master.md  US-TM.md  VISION.md  cartograph_project_brief.md  manual-tests.md  releasing.md  test-map.md  user_stories.md
docs/adapters/: AUTHORING_GUIDE.md
docs/adr/: ADR-0001-tauri-rust-react.md  ADR-0002-escalation-ladder.md  ADR-0003-treesitter-adapter-spi.md  ADR-0004-pluggable-llm-local-first.md  ADR-0005-github-app-clone-topology.md  ADR-0006-kuzu-sqlite-determinism.md  ADR-0007-agentic-sdlc-dogfood.md  ADR-0008-sqlite-graph-store-kuzu-archived.md  ADR-0009-github-auth-ladder.md  ADR-0010-usearch-ollama-semantic-eval-gate.md  ADR-0011-content-addressed-spec-bundle-curation.md  ADR-0012-markdown-adr-recovery-and-drift.md  ADR-0013-explicit-security-fact-projection.md  ADR-0014-content-addressed-delta-reingest.md  ADR-0015-semantic-versioning-changesets.md  ADR-0016-macos-distribution-signing.md  ADR-0017-runtime-wasm-adapter-plugins.md  ADR-0018-multi-platform-port-scope.md
docs/archive/: tracker.csv
docs/design/: DESIGN.md
docs/design/production-ui/: README.md
docs/help/: atlas.md  concepts.md  flows.md  gaps.md  ingest.md  jobs.md  prov.md  settings.md  spec.md  workspace.md
scripts/: check-help-mirror.mjs  check-traceability.mjs  generate-notices.mjs  release-metadata.mjs  release-metadata.test.mjs  release-version.mjs  release-version.test.mjs  signing-secrets.mjs  signing-secrets.test.mjs  version.mjs  version.test.mjs  workflows.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: evidence.rs  findings.rs  jobs.rs  main.rs  metrics.rs  settings.rs
ui/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/.storybook/: main.ts  preview.tsx
ui/src/: App.stories.tsx  App.tsx  atlasLayout.ts  gapClasses.ts  helpNotes.ts  helpTopics.ts  main.tsx  stageLabels.ts  store.test.ts  store.ts  styles.css  tauri.ts  views.ts
ui/src/components/: Acknowledgements.stories.tsx  HelpTip.tsx  (+62 more)
(+4 files in other folders)
