[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
blake3 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
usearch = { version = "2.26", default-features = false }

# Internal crates (SPEC-00 §8.1 crate map)
core-graph = { path = "crates/core-graph" }
core-prov = { path = "crates/core-prov" }
adapters-fw = { path = "crates/adapters-fw" }
adapters-lang-ts = { path = "crates/adapters-lang-ts" }
dynamic = { path = "crates/dynamic" }
events = { path = "crates/events" }
flowtracer = { path = "crates/flowtracer" }
ingest = { path = "crates/ingest" }
iac = { path = "crates/iac" }
spec = { path = "crates/spec" }
llm = { path = "crates/llm" }
semantic = { path = "crates/semantic" }
