[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
version = "0.10.0"
edition = "2024"
publish = false
# Source-available under PolyForm Noncommercial 1.0.0 (see LICENSE.md at the
# workspace root). Inherited path is relative to this workspace manifest.
license-file = "LICENSE.md"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

# Production release hardening (#221). Applies to every workspace binary,
# including the packaged `app` shell:
#   strip         — drop symbol tables/debuginfo from the shipped binary
#   lto="thin"    — cross-crate link-time optimization; thin keeps release
#                   build times reasonable for ~a 2 MB size cost vs fat LTO
#   codegen-units — single unit maximizes optimization (slower compile)
#   panic=abort   — no unwinding tables; smaller binary. Safe here: the tree
#                   has no catch_unwind/should_panic outside the test profile,
#                   and wasmtime guest traps do not rely on host unwinding.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
blake3 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
usearch = { version = "2.26", default-features = false }
regex = "1"
wasmtime = "46"
wasmtime-wasi = "46"

# Internal crates (SPEC-00 §8.1 crate map)
core-graph = { path = "crates/core-graph" }
core-prov = { path = "crates/core-prov" }
adapters-fw = { path = "crates/adapters-fw" }
adapters-plugin-host = { path = "crates/adapters-plugin-host" }
adapters-lang-ts = { path = "crates/adapters-lang-ts" }
adapters-lang-python = { path = "crates/adapters-lang-python" }
adapters-lang-go = { path = "crates/adapters-lang-go" }
adapters-lang-java = { path = "crates/adapters-lang-java" }
adapters-lang-kotlin = { path = "crates/adapters-lang-kotlin" }
dynamic = { path = "crates/dynamic" }
events = { path = "crates/events" }
flowtracer = { path = "crates/flowtracer" }
ingest = { path = "crates/ingest" }
iac = { path = "crates/iac" }
spec = { path = "crates/spec" }
llm = { path = "crates/llm" }
semantic = { path = "crates/semantic" }
agents = { path = "crates/agents" }
