[package]
name = "app"
description = "Tauri shell: commands, job orchestration, UI event bus (SPEC-00 §8.1)"
version.workspace = true
edition.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
core-graph = { workspace = true }
core-prov = { workspace = true }
adapters-lang-ts = { workspace = true }
iac = { workspace = true }
events = { workspace = true }
flowtracer = { workspace = true }
spec = { workspace = true }

[dev-dependencies]
tempfile = "3"
