[package]
name = "adapters-lang-ts"
description = "TypeScript/JavaScript language adapter: tree-sitter T0 extraction (SPEC-00 §3.3, M1)"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
core-graph = { workspace = true }
core-prov = { workspace = true }
adapters-fw = { workspace = true }
iac = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
