[package]
name = "agents"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[dependencies]
core-prov = { workspace = true }
llm = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
