[package]
name = "core-graph"
description = "Graph store: GraphStore trait + SQLite/WAL recursive-CTE impl (ADR-0008)"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
