[package]
name = "core-prov"
description = "Provenance + confidence model, content-addressing (SPEC-00 §4.3)"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
