[package]
name = "dynamic"
description = "Dynamic tier (T1): terraform show -json state/plan enrichment, OTel trace ingest (SPEC-00 §2, §3.1, M6)"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
core-graph = { workspace = true }
core-prov = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
