[package]
name = "events"
description = "Channel-identity resolver: config resolution + producer/consumer stitching (SPEC-00 §3.4, M3)"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
core-graph = { workspace = true }
core-prov = { workspace = true }
adapters-fw = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
adapters-lang-ts = { workspace = true }
tempfile = "3"
