[package]
name = "flowtracer"
description = "Cross-layer flow tracer: T0 path engine with tier recording, Gap truncation, flow scoring (SPEC-00 §5, M3)"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
core-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
