[package]
name = "iac"
description = "IaC extraction: Terraform HCL resource graph + AWS Capability Registry (SPEC-00 §3.1–3.2, M2)"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
core-graph = { workspace = true }
core-prov = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# hcl-edit is the span-preserving parser in the hcl-rs project family
# (verified at M2 per SPEC-00 §15: actively maintained, 2026 releases).
hcl-edit = "0.9"

[dev-dependencies]
tempfile = "3"
