[package]
name = "ingest"
description = "GitHub repo ingest: auth ladder, shallow read-only clone, repo identity (SPEC-00 §10, US-0001)"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
# libgit2 bindings; vendored so CI needs no system libgit2.
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
