[package]
name = "llm"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
