[package]
name = "semantic"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true

[dependencies]
core-graph = { workspace = true }
core-prov = { workspace = true }
llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
usearch = { workspace = true }
